--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,3 +14,36 @@ body{
     text-align: center;
     padding : 1rem;
 }
+
+ul{
+    text-align: center;
+    list-style-type:none;
+    list-style-position: inside;
+}
+
+li{
+    font-size:20px;
+}
+
+button {
+  display: block;
+  margin: 0 auto;
+  padding: .6em .8em;
+  font-size: 20px;
+  font-weight: bold;
+  border-radius: .4em;
+  border: solid 1px;
+  overflow: hidden;
+  cursor: pointer;
+  position: relative;
+  transition: all 1s;
+}
+
+button:focus, button:disabled {
+  outline: none;
+  background: #aaa;
+}
+
+*, *::before, *::after {
+  box-sizing: border-box;
+}
