added blur detection

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
         <p>
             <input type="file" name="file" autocomplete="off" required>
         </p>
-        <button id="upload" type="submit" form="upload_form">GÖNDER</button>
+        <button id="upload" type="submit" form="upload_form">YÜKLE</button>
     </form>
     <div class="footer">
         <p>Made by Abdulkadir Durmaz</p>
